name:                some
version:             0.1.0.0
author:              Henrik Sjöstrand
maintainer:          henrik@rebelalliance.se
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable main
  hs-source-dirs: src
  main-is: main.hs

  build-depends:
    base                      >= 4     && < 5

  ghc-options: -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -fwarn-incomplete-uni-patterns

